--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.9",
         "encore/laravel-admin": "^1.6",
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.25",
