--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "encore/laravel-admin": "^1.6",
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.25",
+        "laravel-admin-ext/config": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
