--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.25",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-activitylog": "^3.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
