--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "lucascudo/laravel-pt-br-localization": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^3.2"
     },
     "require-dev": {
