--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^1.0",
         "lucascudo/laravel-pt-br-localization": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "nategood/httpful": "^0.2.20",
         "spatie/laravel-activitylog": "^3.2"
     },
     "require-dev": {
