--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "lucascudo/laravel-pt-br-localization": "^1.0",
         "maatwebsite/excel": "^3.1",
         "nategood/httpful": "^0.2.20",
-        "spatie/laravel-activitylog": "^3.2"
+        "spatie/laravel-activitylog": "^3.2",
+        "twilio/sdk": "^6.28"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
