implementada forma de executar a migration pelo navegador

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,25 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 REDIRECT_URL=
 
 MESSAGE_INSCRICAO=
+IMPLEMENTADO_POR=
+PAIS_DEFAULT=33
+ESTADO_DEFAULT=16
+CIDADE_DEFAULT=
+
+CIDADE_TERMOS_USO=
+DATA_ALTERACAO_TERMOS_USO=
+
+
+CIDADE_POLITICA_PRIVACIDADE=
+DATA_ALTERACAO_POLITICA_PRIVACIDADE=
+
+LBX_RATING_SERVER=
+NOVO_TORNEIO=true
+
+
+LICHESS_TOKEN=
+
+TWILIO_SID=
+TWILIO_TOKEN=
+
+__INSTALL_FUNCTIONS=false
