--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "lucascudo/laravel-pt-br-localization": "^1.0",
         "maatwebsite/excel": "^3.1",
         "nategood/httpful": "^0.2.20",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^3.2",
         "twilio/sdk": "^6.28"
     },
