--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "v2.0.1",
         "guzzlehttp/guzzle": "^6.3",
-        "jeroennoten/laravel-adminlte": "^1.25",
-        "laravel/framework": "5.8.*",
+        "jeroennoten/laravel-adminlte": "^2.0.2",
+        "laravel/framework": "6.20.44",
         "laravel/tinker": "^1.0",
         "lucascudo/laravel-pt-br-localization": "^1.0",
         "maatwebsite/excel": "^3.1",
