--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,7 @@ CIDADE_POLITICA_PRIVACIDADE=
 DATA_ALTERACAO_POLITICA_PRIVACIDADE=
 
 LBX_RATING_SERVER=
+FIDE_RATING_SERVER=false
 NOVO_TORNEIO=true
 
 
