--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "v2.0.1",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.7",
         "jeroennoten/laravel-adminlte": "^2.0.2",
         "laravel/framework": "6.20.44",
         "laravel/tinker": "^1.0",
