--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.7",
         "jeroennoten/laravel-adminlte": "^2.0.2",
+        "kakposoe/laravel-placeholder-image": "^1.0",
         "laravel/framework": "6.20.44",
         "laravel/tinker": "^1.0",
         "lucascudo/laravel-pt-br-localization": "^1.0",
