--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "jeroennoten/laravel-adminlte": "^2.0.2",
         "kakposoe/laravel-placeholder-image": "^1.0",
         "laravel/framework": "6.20.44",
+        "laravel/passport": "v9.4.0",
         "laravel/tinker": "^1.0",
         "lucascudo/laravel-pt-br-localization": "^1.0",
         "maatwebsite/excel": "^3.1",
