--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/framework": "6.20.44",
         "laravel/passport": "v9.4.0",
         "laravel/tinker": "^1.0",
+        "laravellegends/pt-br-validator": "8.0",
         "lucascudo/laravel-pt-br-localization": "^1.0",
         "maatwebsite/excel": "^3.1",
         "nategood/httpful": "^0.2.20",
