--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "doctrine/dbal": "^2.9",
+        "dompdf/dompdf": "^2.0",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "v2.0.1",
         "guzzlehttp/guzzle": "^6.3",
@@ -22,13 +23,14 @@
         "laravellegends/pt-br-validator": "8.0",
         "lucascudo/laravel-pt-br-localization": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "mpdf/mpdf": "^8.1",
         "nategood/httpful": "^0.2.20",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-activitylog": "^3.2",
-        "twilio/sdk": "^6.28",
-        "dompdf/dompdf": "^2.0",
-        "mpdf/mpdf": "^8.1",
-        "tecnick.com/tcpdf": "^6.6"
+        "symfony/browser-kit": "^4.4",
+        "symfony/dom-crawler": "^5.4",
+        "tecnick.com/tcpdf": "^6.6",
+        "twilio/sdk": "^6.28"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
