--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "spatie/laravel-activitylog": "^3.2",
         "symfony/browser-kit": "^5.4",
         "symfony/dom-crawler": "^5.4",
+        "symfony/http-client": "^5.4",
         "tecnick.com/tcpdf": "^6.6",
         "twilio/sdk": "^6.28"
     },
